Add ignore to flake8's error "W605"

--- a/tox.ini
+++ b/tox.ini
@@ -42,5 +42,5 @@ commands =
     # pyflakes all of src except src/git/long_header.py and src/header.py
     python test/run_pyflakes_src.py
     #pyflakes test
-    flake8 git_version.py versioneer.py
+    flake8 --ignore=W605 git_version.py versioneer.py
     pep8 git_version.py versioneer.py
