Restore support for python 2.6 by specifying pyflakes<=2.0.0

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,8 @@ skip_missing_interpreters = True
 # virtualenv>=14.0.0 is incompatible with python 3.2
 # flake8>=3.0.0 is incompatible with 2.6,3.2,3.3
 deps =
-    pyflakes
+    py26: pyflakes<2.0.0
+    py27,py32,py33,py34,py35,py36,pypy,pypy3: pyflakes>=2.1.1
     py26,py32,py33: flake8<3.0.0
     py27,py34,py35,py36,pypy,pypy3: flake8
     py26,py32: pydocstyle<2
