--- a/tox.ini
+++ b/tox.ini
@@ -8,22 +8,29 @@ envlist = py26,py27,py32,py33,py34,py35,py36,pypy,pypy3
 skip_missing_interpreters = True
 
 [testenv]
-# virtualenv>=14.0.0 is incompatible with python 3.2
-# flake8>=3.0.0 is incompatible with 2.6,3.2,3.3
+# virtualenv>=14.0.0 is incompatible with py32
+# flake8>=3.0.0 is incompatible with py26, py32, py33
+# pyflakes>=2.0.0 is incompatible with py26
 deps =
     py26: pyflakes<2.0.0
-    py27,py32,py33,py34,py35,py36,pypy,pypy3: pyflakes>=2.1.1
+    py27,py32,py33,py34,py35,py36,pypy,pypy3: pyflakes
+
     py26,py32,py33: flake8<3.0.0
     py27,py34,py35,py36,pypy,pypy3: flake8
-    py26,py32: pydocstyle<2
+
     py26,py32: flake8-docstrings<1.1.0
     py27,py33,py34,py35,py36,pypy,pypy3: flake8-docstrings
-    wheel
-    setuptools
+
     py32: virtualenv<14.0.0
     py26,py27,py33,py34,py35,py36,pypy,pypy3: virtualenv
-    discover
+
+    py26,py32: pydocstyle<2
+
     pep8
+    wheel
+    setuptools
+    discover
+
 
 commands =
     pip --version
@@ -40,6 +47,7 @@ commands =
     # this creates git_version.py, which is used by tests
     python setup.py make_long_version_py_git
     pyflakes setup.py versioneer.py git_version.py
+
     # pyflakes all of src except src/git/long_header.py and src/header.py
     python test/run_pyflakes_src.py
     #pyflakes test
